Fix bug with scrollbar when popup or side menu is opened

--- a/app/src/global/global.scss
+++ b/app/src/global/global.scss
@@ -14,7 +14,6 @@ body {
 
 	&.noscroll {
 		overflow: hidden;
-		padding-right: 17px;
 	}
 }
 
